database insertion implemented

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
     <div class="container">
+        <div class="nav-bar">
+            <ul>
+                <a href=""><li>Cmoa</li></a>
+                <a href=""><li>Comico JP</li></a>
+                <a href=""><li>Comico KR</li></a>
+                <a href=""><li>Comico EN</li></a>
+                <a href=""><li>Kakao</li></a>
+                <a href=""><li>See results</li></a>
+            </ul>
+        </div>
         <div class="content">
         </div>
         <button onclick="scrollUp()" id="scroll-up-btn">Up</button>
