--- a/app/static/style.css
+++ b/app/static/style.css
@@ -12,6 +12,17 @@
     grid-auto-rows: 500px;
 }
 
+.nav-bar {
+    position: fixed;
+    top: 20px;
+    left: 30px;
+}
+
+.nav-bar ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
 .title {
     border: solid 1px rgb(226, 226, 226);
     display: grid;
@@ -34,10 +45,27 @@
     border: solid 1px rgb(163, 163, 163);
 }
 
-.bottom button, p, #scroll-up-btn {
+.bottom button, p, #scroll-up-btn, .nav-bar {
     font-family: "Fredoka", sans-serif;
     font-size: 15px;
     color: black;
+}
+
+.nav-bar ul {
+    font-size: 16px;
+}
+
+.nav-bar li {
+    margin-bottom: 5px;
+}
+
+.nav-bar li:hover {
+    color: rgb(170, 37, 37);
+}
+
+.nav-bar a:visited {
+    color: inherit;
+    text-decoration: none;
 }
 
 a {
